--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
     <h1>Willkommen auf meiner Website</h1>
+        <p>Mein Name ist Michael Schilcher</p>
     </body>
 </html>
