--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <body>
     <h1>Willkommen auf meiner Website</h1>
         <p>Mein Name ist Michael Schilcher!</p>
-        
+        <form>
+            Dein Name: <br>
+            <input type="text"><br>
+            Dein Anliegen<br>
+            <textarea></textarea><br>
+            <input type="submit" value="Abschickern">
+        </form>
     </body>
 </html>
